fixed text-align on current-city in mobile

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -186,6 +186,10 @@
     text-align: center;
   }
 
+  .current__city {
+    text-align: left;
+  }
+
   .current__details--heading {
     text-align: center;
   }
